faq wordwrap fixing

--- a/src/assets/scss/_faq.scss
+++ b/src/assets/scss/_faq.scss
@@ -111,16 +111,18 @@
       line-height: 140%;
       text-transform: capitalize;
       padding: 0;
-      width: max-content;
-      flex-direction: row-reverse;
+      width:100%;
+      padding-left: 96px;
       gap: 32px;
       @include mmd {
         font-size: 18px;
         gap: 16px;
+        padding-left: 60px;
       }
       @include sm {
         gap: 15px;
         font-weight: 600;
+        padding-left: 30px;
       }
     }
     & .accordion-body {
@@ -129,16 +131,16 @@
       font-weight: 500;
       text-transform: capitalize;
       line-height: 170%;
-      padding-left: 90px;
+      padding-left: 96px;
       max-width: 95%;
       padding-bottom: 0;
       @include md {
         font-size: 12.74px;
-        padding-left: 54px;
+        padding-left: 60px;
       }
       @include sm {
         max-width: 100%;
-        padding-left: 24px;
+        padding-left: 30px;
         font-size: 12px;
         padding-right: 0;
       }
@@ -157,6 +159,15 @@
   .accordion-button:not(.collapsed)::after {
     background-image: url("../img/minus.svg");
     @include transition;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    @include sm {
+      background-size: 22px !important;
+      width: 22px !important;
+      height: 22px !important;
+    }
   }
   .accordion-button::after {
     background-image: url("../img/plus.svg");
@@ -164,15 +175,19 @@
     background-size: 66px;
     width: 66px;
     height: 66px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
     @include md {
       background-size: 38px !important;
       width: 38px !important;
       height: 38px !important;
     }
     @include sm {
-      background-size: 16px !important;
-      width: 16px !important;
-      height: 16px !important;
+      background-size: 22px !important;
+      width: 22px !important;
+      height: 22px !important;
     }
   }
 
@@ -191,4 +206,9 @@
     height: 300px;
     z-index: -1;
   }
+}
+
+.accordion-header{
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
